--- a/CaseTherapist/Content/hosemann.css
+++ b/CaseTherapist/Content/hosemann.css
@@ -15,6 +15,22 @@ html, body {
     background: #EDEDED;
 }
 
+.panel{
+    font-family: 'Segoe UI','Open Sans', sans-serif;
+}
+
+.panelTitle {
+    display: block;
+    font-size: 2em;
+    padding-left: 0em;
+    padding-bottom: 0.5em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0em;
+    -webkit-margin-end: 0em;
+    -webkit-margin-before: 0em;
+    font-weight: bold;
+}
+
 #userOptionsButton {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -30,6 +46,20 @@ html, body {
         background: url('../Images/bluegears20.png') no-repeat center transparent !important;
     }
 
+#bbqButton {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    float: left;
+    height: 24px;
+    width: 24px;
+    margin-left: 5px;
+    background: url(../Images/blackfeedicon.png) no-repeat center transparent;
+}
+
+    #bbqButton:hover {
+        background: url('../Images/bluefeedicon.png') no-repeat center transparent !important;
+    }
 
 .casetherapist {
     font-size: 1em;
