--- a/CaseTherapist/Views/Shared/_Layout.cshtml
+++ b/CaseTherapist/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/lib/jqwidgets/styles/jqx.base.css")" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/lib/jqwidgets/styles/jqx.metro-lime.css")" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/lib/fancybox/jquery.fancybox.css")"/>
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/lib/font-awesome/css/font-awesome.css")"/>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script> 
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.10.4.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.signalR-2.0.3.js")"></script>
