Multiple attempts to get IE8-9 to work, but there are foreverframe/longpolling bugs with SignalR/JQuery which lock the process. Reduced the broadcast frequency to the updateAllProductQueue function.

--- a/CaseTherapist/Content/hosemann.css
+++ b/CaseTherapist/Content/hosemann.css
@@ -133,22 +133,23 @@ a {
 
 
 .headernotification {
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
-    background-color: lightslategray;
+    line-height: normal;
+    background-color: #DFE5A7;
     border: 1px solid #e5e5e5;
-    font-family: 'Segoe UI';
-    font-size: 13px;
-    color: whitesmoke;
-    padding-bottom: 3px;
+    padding-bottom: 1px;
+    text-align: center;
+    color:#4C402C;
 }
 
     .headernotification #message {
-        padding-left: 20px;
+        /*padding-left: 20px;*/
     }
 
     .headernotification a {
-        color: whitesmoke;
+        color: #34404C;
+        text-decoration: underline;
     }
 
 /* Begin Queue Activity */
